--- a/src/assets/styles/components/SueCard.scss
+++ b/src/assets/styles/components/SueCard.scss
@@ -1,6 +1,6 @@
 .sueCard {
-  width: 100%;
-  height: 650px;
+  // width: 100%;
+  // height: 650px;
   padding: 0px;
   background-size: cover;
   &__title {
@@ -12,6 +12,6 @@
   &__description {
     font-weight: lighter;
     font-size:medium;
-    text-align: left;
+    // text-align: left;
   }
 }
