--- a/src/assets/styles/components/DefaultNavbar.scss
+++ b/src/assets/styles/components/DefaultNavbar.scss
@@ -2,9 +2,12 @@
   height: 170px;
   background-color: none;
   font-family: 'Raleway', sans-serif;
-  font-size: 10px;
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 5px;
   &__link {
-    letter-spacing: 3px;
+    padding-right: 70px;
+    padding-left: 35px;
   }
   &__logo {
     width: 150px;
