--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ body {
   font-family: 'Raleway', sans-serif;;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding:0;
+  margin:0;
+
+  top:0;
+  left:0;
+  height: 100%;
 }
 
 code {
