--- a/src/assets/styles/components/Button.scss
+++ b/src/assets/styles/components/Button.scss
@@ -16,3 +16,16 @@
   //   color: 
   // }
 }
+
+.outlinedButton {
+  border: solid 1px white;
+  border-radius: 25px;
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
+  font-size: 12px;
+  letter-spacing: 2px;
+  height: 35px;
+  width: 140px;
+  background-color: transparent;
+}
