--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-body {
-  margin: 0;
+html, body, #root {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
@@ -8,7 +7,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   padding:0;
   margin:0;
-
   top:0;
   left:0;
   height: 100%;
