--- a/src/assets/styles/components/Form.scss
+++ b/src/assets/styles/components/Form.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: start;
   align-items: center;
+  margin-top: 5vh;
 }
 
 .form-label {
@@ -13,6 +14,16 @@
   // text-align: left;
   font-weight: 600;
   font-size: 14px;
+}
+
+.form-labelStepOne {
+  margin-right: 10px;
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 3px;
+  font-weight: 600;
+  font-size: 14px;
+  margin-top: 5vh;
 }
 
 .form-input {
