--- a/src/assets/styles/components/DefaultNavbar.scss
+++ b/src/assets/styles/components/DefaultNavbar.scss
@@ -22,5 +22,14 @@
 }
 
 .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav.show {
-  color: 'white';
+  color: white;
+
 }
+
+// .navbarItem {
+//   color: 'white';
+//   font-family: 'Raleway', sans-serif;
+//   letter-spacing: 3px;
+//   font-weight: 200;
+//   font-size: '15px'
+// }
