--- a/src/assets/styles/pages/TemplateForm.scss
+++ b/src/assets/styles/pages/TemplateForm.scss
@@ -15,3 +15,21 @@
     padding-bottom: 30px;
   }
 }
+
+.formContainerPurple {
+  background-color: #4E4B99;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  border-radius: 25px;
+  margin: 10px;
+  &__section {
+    display:flex;
+    flex-direction:row; 
+    align-items:center;
+    justify-content:space-between;
+    padding-top:30px;
+    padding-bottom: 30px;
+  }
+}
