--- a/src/assets/styles/components/Form.scss
+++ b/src/assets/styles/components/Form.scss
@@ -112,8 +112,8 @@
   font-weight: 400;
   font-size: 12px; 
   letter-spacing: 2px;
-  height: 15vh;
-  width: 50vh;
+  height: 50vh;
+  width: 80vh;
   margin-left: 13px;
-  padding-left: 30px;
+  padding: 30px;
 }
