--- a/src/assets/styles/pages/TemplateForm.scss
+++ b/src/assets/styles/pages/TemplateForm.scss
@@ -14,6 +14,14 @@
     padding-top:30px;
     padding-bottom: 30px;
   }
+  &__section-column {
+    display:flex;
+    flex-direction:column; 
+    align-items:center;
+    justify-content:center;
+    padding-top:30px;
+    padding-bottom: 30px;
+  }
 }
 
 .formContainerPurple {
