feat: create responsive style

--- a/src/assets/styles/components/main.scss
+++ b/src/assets/styles/components/main.scss
@@ -5,4 +5,5 @@
 @import 'Form';
 @import 'Stepper';
 @import 'Icons';
-@import 'FeedbackModal.scss'
+@import 'FeedbackModal.scss';
+@import 'Contactenos.scss'
