--- a/src/assets/styles/components/Button.scss
+++ b/src/assets/styles/components/Button.scss
@@ -3,6 +3,9 @@
     border: 1px solid #fab816;
     color:  #F3F3F3;
     border-radius: 25px;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    letter-spacing: 2px;
 }
 
 .sueCardButton {
