--- a/src/assets/styles/components/SueCard.scss
+++ b/src/assets/styles/components/SueCard.scss
@@ -17,14 +17,32 @@
 }
 
 .docCard {
-  // width: 100%;
-  // height: 650px;
   padding-left: 20px;
   background-size: cover;
   color: white;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 5px;
   text-align: left;
+  &__title {
+    font-weight: 700;
+  }
+  &__subtitle {
+    font-weight: normal;
+  }
+  &__description {
+    padding-top: 30px;
+    font-weight: normal;
+    font-size: larger;
+    letter-spacing: 0px;
+    line-height: normal;
+  }
+}
+
+.stepsDescriptionCard {
+  background-size: cover;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 5px;
+  text-align: center;
   &__title {
     font-weight: 700;
   }
