--- a/src/assets/styles/components/Form.scss
+++ b/src/assets/styles/components/Form.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: start;
   align-items: center;
-  margin-top: 5vh;
+  margin-top: 30px;
 }
 
 .form-label {
@@ -23,7 +23,7 @@
   letter-spacing: 3px;
   font-weight: 600;
   font-size: 14px;
-  margin-top: 5vh;
+  margin-top: 15px;
 }
 
 .form-select-basic {
@@ -65,7 +65,7 @@
   font-size: 12px; 
   letter-spacing: 2px;
   height: 55px;
-  width: 470px;
+  width: 400px;
   margin-left: 13px;
   padding-left: 30px;
 }
@@ -142,8 +142,8 @@
   font-weight: 400;
   font-size: 12px; 
   letter-spacing: 2px;
-  height: 50vh;
-  width: 80vh;
+  height: 250px;
+  width: 100%;
   margin-left: 13px;
   padding: 30px;
 }
