--- a/src/assets/styles/components/SueCard.scss
+++ b/src/assets/styles/components/SueCard.scss
@@ -43,6 +43,8 @@
   font-family: 'Raleway', sans-serif;
   letter-spacing: 5px;
   text-align: center;
+  height: 400px;
+  margin-bottom: 100px;
   &__title {
     font-weight: 700;
   }
