--- a/src/assets/styles/components/Button.scss
+++ b/src/assets/styles/components/Button.scss
@@ -3,6 +3,9 @@
     border: 1px solid #fab816;
     color:  #F3F3F3;
     border-radius: 25px;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    letter-spacing: 2px;
 }
 
 .sueCardButton {
@@ -82,6 +85,26 @@
     width: 280;
     &__yellow {
       color: #FAB816;
+      border: none;
+      border-radius: 25px;
+      font-family: 'Raleway', sans-serif;
+      font-weight: 700;
+      letter-spacing: 2px;
+      height: 35px;
+      background-color: white;
+    }
+    &__red {
+      color: #EB646F;
+      border: none;
+      border-radius: 25px;
+      font-family: 'Raleway', sans-serif;
+      font-weight: 700;
+      letter-spacing: 2px;
+      height: 35px;
+      background-color: white;
+    }
+    &__purple {
+      color: #4E4B99;
       border: none;
       border-radius: 25px;
       font-family: 'Raleway', sans-serif;
