--- a/src/assets/styles/components/SueCard.scss
+++ b/src/assets/styles/components/SueCard.scss
@@ -45,7 +45,7 @@
   font-family: 'Raleway', sans-serif;
   letter-spacing: 5px;
   text-align: center;
-  height: 400px;
+  height: 500px;
   margin-bottom: 100px;
   &__title {
     font-weight: 700;
@@ -59,5 +59,9 @@
     font-size: larger;
     letter-spacing: 0px;
     line-height: normal;
+  }
+  &__main-content {
+    text-align: justify;
+    line-height: 25px;
   }
 }
