feat: add habeas data modal

--- a/src/assets/styles/components/main.scss
+++ b/src/assets/styles/components/main.scss
@@ -6,4 +6,5 @@
 @import 'Stepper';
 @import 'Icons';
 @import 'FeedbackModal.scss';
-@import 'Contactenos.scss'
+@import 'Contactenos.scss';
+@import 'HabeasDataModal.scss';
