--- a/src/assets/styles/components/Button.scss
+++ b/src/assets/styles/components/Button.scss
@@ -46,6 +46,17 @@
 }
 
 .containerButton {
+  &__black {
+    color: black;
+    border: none;
+    border-radius: 25px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    letter-spacing: 2px;
+    height: 35px;
+    width: 140px;
+    background-color: white;
+  }
   &__red {
     color: #eb646f;
     border: none;
